// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatCoverage should format standard coverage 1`] = `
"| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟢                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |

"
`;

exports[`formatCoverage should format standard coverage 2`] = `
"| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟢                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |

"
`;

exports[`formatCoverage should format standard coverage 3`] = `
"| <div title=\\"Status of coverage:&#10; 🟢 - ok&#10; 🟡 - slightly more than threshold&#10; 🔴 - under the threshold\\">St.<sup>:grey_question:</sup></div> | Category   | Percentage | Covered / Total |
| :----------------------------------------------------------------------------------------------------------------------------------------------------: | :--------- | :--------- | :-------------: |
|                                                                           🟢                                                                           | Statements | 81.82%     |      27/33      |
|                                                                           🟢                                                                           | Branches   | 100%       |       8/8       |
|                                                                           🟡                                                                           | Functions  | 63.64%     |       7/11      |
|                                                                           🟢                                                                           | Lines      | 80.65%     |      25/31      |

"
`;
